--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "next": "14.0.1",
     "quill": "^1.3.7",
     "react": "^18",
