--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -18,11 +18,14 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-icons/all-files": "^4.1.0",
+    "@trpc/client": "^10.43.3",
+    "@trpc/server": "^10.43.3",
     "next": "14.0.1",
     "quill": "^1.3.7",
     "react": "^18",
     "react-dom": "^18",
-    "ui": "*"
+    "ui": "*",
+    "prisma": "*"
   },
   "devDependencies": {
     "@types/node": "^20",
