--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -18,16 +18,26 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-icons/all-files": "^4.1.0",
-    "@trpc/client": "^10.43.3",
-    "@trpc/server": "^10.43.3",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.43.6",
+    "@trpc/next": "^10.43.6",
+    "@trpc/react-query": "^10.43.6",
+    "@trpc/server": "^10.43.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/mongoose": "^5.11.97",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.1",
     "next": "14.0.1",
+    "prisma": "*",
     "quill": "^1.3.7",
     "react": "^18",
     "react-dom": "^18",
     "ui": "*",
-    "prisma": "*"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "@types/node": "^20",
     "@types/quill": "^2.0.14",
     "@types/react": "^18",
