--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^1.8.18",
     "@prisma/client": "5.6.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -26,10 +27,10 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
+    "db": "*",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "next": "14.0.1",
-    "prisma": "*",
     "quill": "^1.3.7",
     "react": "^18",
     "react-dom": "^18",
