--- a/apps/docsapp/package.json
+++ b/apps/docsapp/package.json
@@ -34,6 +34,8 @@
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toast-notifications": "^2.5.1",
+    "react-toastify": "^9.1.3",
     "superjson": "^2.2.1",
     "ui": "*",
     "zod": "^3.22.4"
