--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,9 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@react-icons/all-files": "^4.1.0",
+    "date-fns": "^2.30.0",
     "react-icons": "^4.11.0"
   }
 }
