--- a/packages/recoilStore/package.json
+++ b/packages/recoilStore/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "@gdocs/db",
+  "name": "@gdocs/recoilstore",
   "version": "1.0.0",
   "description": "",
-  "module": "/dist/index.js",
-  "main": "src/index.ts",
-  "source": "src/index.ts",
-  "types": "src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "src/index.ts",
   "scripts": {
     "build": "tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "prisma": "^5.6.0"
+  "dependencies": {
+    "recoil": "^0.7.7"
   }
 }
