--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "@gdocs/ui",
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
@@ -22,6 +22,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@react-icons/all-files": "^4.1.0",
     "date-fns": "^2.30.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "recoil": "^0.7.7",
+    "@gdocs/recoilstore": "*"
   }
 }
