--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,11 +19,11 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@gdocs/recoilstore": "*",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@react-icons/all-files": "^4.1.0",
     "date-fns": "^2.30.0",
     "react-icons": "^4.11.0",
-    "recoil": "^0.7.7",
-    "@gdocs/recoilstore": "*"
+    "recoil": "^0.7.7"
   }
 }
