--- a/apps/docsapp/package.json
+++ b/apps/docsapp/package.json
@@ -10,9 +10,13 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    
+    "start": "concurrently \"next dev\" \"node server/websocket/socketServer.ts\""
+    
   },
   "dependencies": {
+    "@gdocs/recoilstore": "*",
+    "@gdocs/ui": "*",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -37,8 +41,7 @@
     "react-toast-notifications": "^2.5.1",
     "react-toastify": "^9.1.3",
     "superjson": "^2.2.1",
-    "@gdocs/ui": "*",
-    "@gdocs/recoilstore": "*",
+    "ws": "^8.15.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
