--- a/apps/docsapp/package.json
+++ b/apps/docsapp/package.json
@@ -10,9 +10,7 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    
-    "start": "concurrently \"next dev\" \"node server/websocket/socketServer.ts\""
-    
+    "start": "next start"
   },
   "dependencies": {
     "@gdocs/recoilstore": "*",
