--- a/apps/docsapp/package.json
+++ b/apps/docsapp/package.json
@@ -32,12 +32,14 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "argon2": "^0.31.2",
+    "flowbite": "^2.2.1",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toast-notifications": "^2.5.1",
     "react-toastify": "^9.1.3",
+    "rsuite": "^5.49.0",
     "superjson": "^2.2.1",
     "ws": "^8.15.1",
     "zod": "^3.22.4"
