--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@react-icons/all-files": "^4.1.0",
     "date-fns": "^2.30.0",
+    "flowbite": "^2.2.1",
     "react-icons": "^4.11.0",
     "recoil": "^0.7.7"
   }
