--- a/apps/docsapp/package.json
+++ b/apps/docsapp/package.json
@@ -35,6 +35,7 @@
     "flowbite": "^2.2.1",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
+    "quill": "^1.3.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toast-notifications": "^2.5.1",
